--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,24 +1,35 @@
-{: .list-unstyled }
-* [Pagina inicial][index]
-* [Introducció][intro]
-* [Muntatge i instal·lació física de l'antena i del router][muntatge]
-* [Modificar el firmware del router i buscar un punt d'accés Guifi.net][firmware1] [(2)][firmware2] [(3)][firmware3] [(4)][firmware4] [(5)][firmware5]
-* [Alta a Guifi.net][alta1] [(2)][alta2]
-* [Configuració del router][router]
-* [Configuració final (proxy)][proxy] [(2)][proxy2]
-
----
-
-[index]: index.html
-[intro]: intro.html
-[muntatge]: muntatge.html
-[firmware1]: firmware.html
-[firmware2]: firmware2.html
-[firmware3]: firmware3.html
-[firmware4]: firmware4.html
-[firmware5]: firmware5.html
-[alta1]: alta.html
-[alta2]: alta2.html
-[router]: router.html
-[proxy]: proxy.html
-[proxy2]: proxy2.html
+<nav id="main-anv" class="well">
+    <ol>
+        <li>
+            <a href="intro.html">Introducció i passos previs</a>
+        </li>
+        <li>
+            <a href="muntatge.html">Instal·lació física dels aparells</a>
+        </li>
+        <li>
+            <a href="firmware.html">Modificar el firmware del router</a>
+            <ul>
+                <li><a href="firmware-buffalo-whr-g54s.html">Buffalo WHR-G54S</a></li>
+                <li><a href="firmware-linksys-wrt-54gl.html">Linksys WRT-54GL</a></li>
+            </ul>
+        </li>
+        <li>
+            <a href="ap.html">Buscar un punt d'accés</a>
+        </li>
+        <li>
+            <a href="alta.html">Alta a Guifi.net</a>
+            <ul>
+                <li><a href="node.html">Creació d'un node</a></li>
+                <li><a href="trasto.html">Alta del trasto i la radio</a></li>
+            </ul>
+        </li>
+        <li><a href="router.html">Configuració del router</a></li>
+        <li>
+            <a href="proxy.html">Configuració del proxy</a>
+            <ul>
+                <li><a href="proxy-ie.html">Internt Explorer</a></li>
+                <li><a href="proxy-mf.html">Mozilla Firefox</a></li>
+            </ul>
+        </li>
+    </ol>
+</nav>
