--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,32 +2,63 @@
 layout: default
 ---
 
-<article>
+{% include header.html %}
 
-    {% include header.html %}
+<div class="container">
 
-    <div id="body">
+    <div class="row">
 
-        <div class="container">
+        <div class="col-md-4 col-md-push-8">
 
-            <div class="row">
+            <aside>
 
-                <div class="col-md-12">
+                {% include menu.html %}
 
-                    <div class="page-header">
-                        <h1>{{ page.title }}</h1>
-                    </div>
+            </aside>
 
-                    {{ content }}
+        </div>
+
+        <div class="col-md-8 col-md-pull-4">
+
+            <article id="body">
+
+                <div class="page-header">
+
+                    <h1>
+                        {{ page.title }}
+                        {% if page.subtitle %}
+                        <small>{{ page.subtitle }}</small>
+                        {% endif %}
+                    </h1>
 
                 </div>
 
-            </div>
+                {{ content }}
+
+                {% if page.prev or page.next %}
+                    <hr>
+
+                    <nav>
+                        <ul class="pager">
+                            {% if page.prev %}
+                            <li class="previous"><a href="{{ page.prev }}"><span aria-hidden="true">&larr;</span> Anterior</a></li>
+                            {% endif %}
+                            {% if page.next %}
+                            <li class="next"><a href="{{ page.next }}">Següent <span aria-hidden="true">&rarr;</span></a></li>
+                            {% endif %}
+                        </ul>
+                    </nav>
+
+                {% endif %}
+
+
+
+            </article>
 
         </div>
 
     </div>
 
-    {% include footer.html %}
+</div>
 
-</article>
+{% include footer.html %}
