Arreglar el footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,13 @@
                     <hr>
 
                     <p class="text-center">
-                        Tot el contingut CC agraïemnt de l'autor
+                        Tot el contingut
+                        –
+                        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.5/es/deed.ca" title="Autor: Jaume Sala">
+                            <img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-nc-sa/2.5/es/80x15.png" />
+                        </a>
+                        –
+                        Jaume Sala
                     </p>
 
                 </div>
